--- a/readme
+++ b/readme
@@ -1,18 +1,10 @@
+Get HTML page, parse them and paste in DB reference of new apartment.
 
-Получаем HTML страницу (http://realt.ua), анализируя ее получаем необходимую ссылку, 
-ссылку вместе со значением vid (идентифицирует квартиру) помещаем в БД (MySQL, www.cleardb.com)
+treeHashII.rb
 
-#Шаблон запроса
-      #http://realt.ua/Db2/0Sd_Kv.php?cnt_all=289&idNp=100000&Cn_min=1000&Cn_max=3000&valt=4&TmSdch=9999&vSps=0&srtby=5&pos=0
-      #Cn_min= минимальная цена
-      #Cn_max= максимальная цена
-      #valt тип валюты 4-евро 2-долары 1-гривня
-      #при добавлении vSps=0 отображается таблицей 
-      #cnt_all количество строк таблицы вернувшихся с сервера (можно пропускать)
-      #showNum количество строк отображаемых в таблице вывода 20, 30, 50 задать вручную
-      #pos перелистывает страницу на следующие n строк при showNum=50 - 0, 50, 100. Необходимо вычислять через параметр cnt_all и showNum
+hash1 = {:value1 => :one, value2 => :two}
+hash2 = {:one => 1, :ten => 10}
 
-      #порядок следования переменных безразлично
+hash1.treeHash hash2 #=> {:value1 => 1, value2 => :two}
 
-Остальную информацию смотрите по ссылке github.com/AlexeyAlexey/realt  
 
