--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-Get HTML page, parse them and paste in DB reference (new apartment).
+Get HTML page, parse them pages and paste in DB reference (new apartment).
 
 treeHashII.rb
 
